add VM Options to Main.java's tail add column resize policy for the table views